# predico-collabforecast

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  tasks.py
api/: .coveragerc  .gitignore  .secrets.baseline  Dockerfile  README.md  db_maintenance.py  dotenv  entrypoint.sh  get_test_token.py  pre-commit-config.yaml  pyproject.toml
api/api/: pagination.py  urls.py  views.py
api/api/email/utils/: email_messages.py  email_utils.py
api/api/helpers/: environment.py
api/api/renderers/: CustomRenderer.py
api/api/settings/: base.py  develop.py  production.py  test.py
api/api/templates/: email_verification_success.html  front_page.html
api/api/utils/: custom_schema.py  custom_validators.py
api/api/utils/exceptions/: custom_exception_handler.py
api/api/utils/logging/: handlers.py
api/authentication/schemas/: responses.py
api/authentication/serializers/: login.py
api/authentication/views/: login.py
api/data/: urls.py
api/data/exceptions/: Exception.py
api/data/helpers/: sql.py
api/data/migrations/: 0001_initial.py  0002_initial.py
api/data/models/: __init__.py  individual_forecasts.py  raw_data.py
api/data/schemas/: query.py  responses.py
api/data/serializers/: individual_forecasts.py  market_forecasts.py  raw_data.py
api/data/util/: validators.py
api/data/views/: individual_forecasts.py  market_forecasts.py  raw_data.py
api/market/: urls.py
api/market/exceptions/: Exception.py  __init__.py
api/market/migrations/: 0001_initial.py  0002_initial.py  0003_marketsessionsubmissionscores.py  0004_marketsessionensembleweights.py  0005_remove_marketsessionensemble_weights.py  0006_alter_marketsession_open_ts.py  0007_marketsessionrampalerts.py
api/market/models/: __init__.py  market_session.py  market_session_challenge.py  market_session_ensemble_forecasts.py  market_session_ensemble_weights.py  market_session_submission.py  market_session_submission_scores.py
api/market/schemas/: query.py  responses.py
api/market/serializers/: __init__.py  market_session.py  market_session_challenge.py  market_session_ensemble_forecasts.py  market_session_ensemble_weights.py  market_session_submission.py  market_session_submission_scores.py
api/market/tests/: common.py
api/market/tests/urls/: test_urls.py
api/market/util/: validators.py
api/market/views/: market_session.py  market_session_challenge.py  market_session_ensemble_forecasts.py  market_session_ensemble_weights.py  market_session_submission.py  market_session_submission_scores.py
api/system/: backup.py  restore.py  vacuum.py
api/users/: managers.py  urls.py
api/users/exceptions/: Exception.py  __init__.py
api/users/management/commands/: createadmin.py  delete_old_register_tokens.py  delete_old_reset_password_tokens.py
api/users/migrations/: 0001_initial.py  0002_user_is_session_manager.py  0003_onetimeregistertoken_passwordresetrequest_and_more.py
api/users/models/: __init__.py  user.py  user_notification.py  user_resources.py
api/users/notifications/: notification_data.py
api/users/schemas/: query.py  responses.py
api/users/serializers/: user.py  user_notification.py  user_reset_password.py  user_resources.py
api/users/tests/: common.py
api/users/tests/serializers/: test_user_notification_serializer.py  test_user_notification_type_serializer.py  test_user_serializer.py
api/users/util/: validators.py  verification.py
api/users/views/: admin_user.py  user.py  user_notification.py  user_reset_password.py  user_resources.py
(+281 files in other folders)
